chore: sync GitHub repo index